WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254363
UI-side Compositing: PDF scrollbars are not draggable and don't grow when hovered
https://bugs.webkit.org/show_bug.cgi?id=254363
Summary
UI-side Compositing: PDF scrollbars are not draggable and don't grow when hov...
Richard Robinson
Reported
2023-03-23 13:25:33 PDT
rdar://105908418
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2023-03-23 13:32:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/11880
EWS
Comment 2
2023-03-23 16:14:17 PDT
Committed
262043@main
(6d3572a224f0): <
https://commits.webkit.org/262043@main
> Reviewed commits have been landed. Closing PR #11880 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug