UI-side Compositing: PDF scrollbars are not draggable and don't grow when hovered https://bugs.webkit.org/show_bug.cgi?id=254363 rdar://105908418

Reviewed by Tim Horton.

For some reason, when UI-side compositing is enabled, the scrollbar's layer's backing store
is larger than the layer itself when viewing a zoomed-in PDF. This causes the scrollbar's
appearance's y-value to be offset by some amount.

This PR works around this by clearing the contents of the layer so that CoreAnimation creates
a new backing store whenever the frame's change, which forces the new backing store to have the
correct size.

* Source/WebKit/WebProcess/Plugins/PDF/PDFPlugin.mm:
(WebKit::PDFPlugin::updateScrollbars):

Canonical link: https://commits.webkit.org/262043@main